-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.655 2009-11-10 00:47:06 guru Exp $
-----------------------------------------------------------------------------------------

2009-11-09	pwessel
	* x2sys/x2sys_init.c:	Did not accept -m, only old -M

2009-11-08	pwessel
	* gmt_shore.[ch]:	Changes to accommodate new GSHHS2.0.2 netcdf files
				which needed more metadata to properly compute the
				level of tile corners after features where dropped
				due to size etc.  2.0.2 will be released with GMT 4.5.2
				but early adopters (CVS) will get a warning with
				instructions on how to ftp.
	* grdgradient.c:	Now, -Lg will imply -fg to properly set geographic units
				Fixed bug where the gradient at the S pole was not
				replicated to x = east.

2009-11-07	pwessel
	* gmt_io.c:		GMT_access did not check for NULL filename

2009-11-07	remko
	* pslib.c:		Ellipse was wrongly dimensioned by semi-major and semi-
				minor axes, instead of major and minor axes.
2009-11-05	pwessel
	* imgsrc/img2google:	One gmtmath call did not have -Q

2009-11-02	pwessel
	* mapproject.c:		The -S option failed after i/o makeover.
	
2009-10-28	remko
	* pslib.c:		Bug fix: memory never got freed by ps_free.

2009-10-23	remko
	* config.mk.in, common.mk: Replaced makegmt.macros by config.mk
				Replaced gmtalldeps.macros by common.mk
	* All makefiles:	Improved handling of libs in Makefiles

2009-10-15	pwessel
	* x2sys.c:		x2sys_pick_fields should NOT reset x_col, y_col, t_col as
				these indicate which input columns hold x, y, t.
	* x2sys/x2sys_datalist.c:	Confusion between input order and output order when
				the -F<list> option was used.

2009-10-15	jluis
	* gmt_customio.c:	Fixed bug resulting from releasing the pointer to from_gdalread
				structure before its members.
	* gmt_gdalread.c:	Force computation of min/max since metadata info may be wrong

2009-10-14	remko
	* grdtrend.c:		Explicitly set pstuff[0] = 1 and use it in loops.
