@@ -1,6 +1,9 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.655 2009-11-10 00:47:06 guru Exp $
+	$Id: ChangeLog,v 1.656 2009-11-10 01:12:12 remko Exp $
 -----------------------------------------------------------------------------------------
+
+2009-11-10	remko
+	* gmt_plot.c:		Get dimensions of 3D ellipse right
 
 2009-11-09	pwessel
 	* x2sys/x2sys_init.c:	Did not accept -m, only old -M
